# robogait_interiores

APUNTES/: commands.odt
STM32CubeIDE/workspace_1.9.0/.metadata/: .log4j.xml  version.ini
STM32CubeIDE/workspace_1.9.0/firmware_interiores_v1/: .cproject  .mxproject  .project  firmware_interiores_v1 Debug.launch  firmware_interiores_v1.ioc
STM32CubeIDE/workspace_1.9.0/firmware_interiores_v1/.metadata/: .log4j.xml  version.ini
STM32CubeIDE/workspace_1.9.0/firmware_interiores_v1/6283A1_AnalogFlicker/: Release_notes.html  Release_notes.md  readme.txt
STM32CubeIDE/workspace_1.9.0/firmware_interiores_v1/Debug/: firmware_interiores_v1.elf  firmware_interiores_v1.list  firmware_interiores_v1.map  makefile  objects.list
STM32CubeIDE/workspace_1.9.0/firmware_interiores_v2_nucleo_f446ze/: .mxproject  .project  firmware_interiores_v2_nucleo_f446ze.ioc
STM32CubeIDE/workspace_1.9.0/firmware_interiores_v2_nucleo_f446ze/Debug/: firmware_interiores_v2_nucleo_f446ze.elf  firmware_interiores_v2_nucleo_f446ze.list  firmware_interiores_v2_nucleo_f446ze.map  makefile
STM32CubeIDE/workspace_1.9.0/firmware_interiores_v2_nucleo_f446ze_v1/: .cproject  .mxproject  firmware_interiores_v2_nucleo_f446ze Debug.launch  firmware_interiores_v2_nucleo_f446ze.ioc
STM32CubeIDE/workspace_1.9.0/firmware_interiores_v2_nucleo_f446ze_v1/Debug/: firmware_interiores_v2_nucleo_f446ze.elf  firmware_interiores_v2_nucleo_f446ze.list  firmware_interiores_v2_nucleo_f446ze.map  makefile  objects.list
STM32CubeIDE/workspace_diego/.metadata/: .log4j.xml  version.ini
STM32CubeIDE/workspace_diego/6283A1_ALSValues/: 6283A1_ALSValues.ioc  Release_notes.html  Release_notes.md  readme.txt
STM32CubeIDE/workspace_diego/6283A1_ALSValues/Inc/: 6283a1_conf.h  RTE_Components.h  app_x-cube-als.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  stm32f4xx_nucleo.h
STM32CubeIDE/workspace_diego/6283A1_ALSValues/STM32CubeIDE/: .cproject  .project  STM32F401RETX_FLASH.ld  STM32F401RETX_RAM.ld
STM32CubeIDE/workspace_diego/6283A1_ALSValues/Src/: app_als_int_pin.c  app_x-cube-als.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32CubeIDE/workspace_diego/TEST_ADC/: .cproject  .mxproject  TEST_ADC Debug.launch  TEST_ADC.ioc
STM32CubeIDE/workspace_diego/TEST_ADC/Debug/: TEST_ADC.elf  TEST_ADC.list  TEST_ADC.map  makefile
STM32CubeIDE/workspace_diego/firmware_interiores_v2_nucleo_f446ze/: firmware_interiores_v2_nucleo_f446ze.ioc
STM32CubeIDE/workspace_diego/firmware_interiores_v2_nucleo_f446ze/.metadata/: .log4j.xml  version.ini
STM32CubeIDE/workspace_diego/firmware_interiores_v2_nucleo_f446ze/Debug/: firmware_interiores_v2_nucleo_f446ze.elf  (+4 more)
STM32CubeIDE/workspace_diego/proyecto_imu/: .cproject  .mxproject  .project  proyecto_imu Debug.launch  proyecto_imu.ioc
azure_kinect_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
azure_kinect_ws/log/: latest_build
azure_kinect_ws/src/body_tracker_msgs/: CMakeLists.txt  package.xml
azure_kinect_ws/src/body_tracking/: CMakeLists.txt
azure_kinect_ws/src/body_tracking/src/: body_tracking_node.cpp  kinectAzure_body_tracker_node.cpp  kinectAzure_body_tracker_node_plus_recording.cpp  kinectAzure_opencv.cpp  main_original.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
azure_kinect_ws/src/kinect_azure_body_tracker/: CMakeLists.txt  package.xml
azure_kinect_ws/src/kinect_azure_body_tracker/src/: csvProcessing.cpp  kinectAzure_body_tracker_node.cpp  kinectAzure_body_tracker_node_finite.cpp  kinectAzure_body_tracker_node_full_processing.cpp  kinectAzure_body_tracker_node_plus_recording.cpp  kinectAzure_body_tracker_node_plus_recording_simplified.cpp  kinectAzure_body_tracker_node_plus_recording_test.cpp  kinectAzure_body_tracker_node_simplified.cpp
catkin_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
catkin_ws/log/: latest_build
catkin_ws/src/pkg_navigation/: CMakeLists.txt  package.xml
catkin_ws/src/pkg_navigation/bag_files/rosbag2_2022_06_08-08_25_46/: metadata.yaml  rosbag2_2022_06_08-08_25_46_0.db3
catkin_ws/src/pkg_navigation/config/: ekf.yaml  map_server_params.yaml  nav2.yaml  nav2_params.yaml  teb_params (another copy).yaml  teb_params.yaml  teb_params_27_06.yaml
catkin_ws/src/pkg_navigation/launch/: person_state_publisher.py  realsense_pointcloud_launch.py  robogait_launch_states.py  robogait_mapping_launch.py  robogait_mapping_launch_test.py  robogait_online_async_launch.py  robogait_state_publisher.py  robogait_straight.py  teb_nav2_bringup_launch.py  teb_tb3_simulation_launch.py
catkin_ws/src/pkg_navigation/maps/: map.yaml  map_laboratory.pgm  map_laboratory.yaml  map_pasillos_posteriores.pgm  map_pasillos_posteriores.yaml  map_pasillos_posteriores_edited.pgm  map_pasillos_posteriores_edited.yaml
catkin_ws/src/pkg_navigation/rviz/: rviz_config.rviz  rviz_config_map_server.rviz  rviz_config_nav2_teb.rviz
catkin_ws/src/pkg_navigation/src/: camera_controller.cpp  person_odom_tf2_listener.cpp  publisher_initial_pose.cpp  publisher_subscriber.cpp  robot_controller (copy).cpp  robot_controller.cpp  robot_controller_position.cpp  robot_controller_straight.cpp  robot_controller_test_rotation.cpp  robot_odom_tf2_listener.cpp  tf2_broadcaster.cpp  tf2_broadcaster_camera.cpp  tf2_broadcaster_person.cpp
catkin_ws_template/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
catkin_ws_template/log/: latest_build
catkin_ws_template/src/test/: CMakeLists.txt
catkin_ws_template/src/test/src/: publisher_subscriber.cpp
ros2_serial_cpp/: CMakeLists.txt
ros2_serial_cpp/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_serial_cpp/log/: latest_build
ros2_serial_cpp/models/: cmd_vel_1_2ms.sh  model_con_persona1.csv  model_con_persona2.csv  model_con_persona3.csv.csv  model_odom20ms.csv  model_odom_30ms.csv  model_test1.csv  model_test2.csv  model_test3.csv  model_test4.csv  model_test5.csv
ros2_serial_cpp/models/modelado2/: model2_001.csv  model2_002.csv
ros2_serial_cpp/src/: driver_controller (copy).cpp  driver_controller.cpp  modelado (copy).cpp  modelado.cpp
(+512 files in other folders)
